--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
@@ -1,10 +1,11 @@
-﻿<Page x:Class="CSC3045_CS2.Pages.AddSprintTeamMember"
+﻿<Page x:Class="CSC3045_CS2.Pages.EditSprintTeam"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:dd="urn:gong-wpf-dragdrop"
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
+      Background="{StaticResource BackgroundGradient}"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="AddSprintTeamMember">
@@ -17,21 +18,24 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-            <ListBox Grid.Column="0"
-                     Name="AvailableDevelopersListBox"
+            <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource Label}" Text="Available Developers" HorizontalAlignment="Center"/>
+            <ListBox Name="AvailableDevelopersListBox"
+                     Grid.Column="0"
+                     Grid.Row="1"
+                     Margin="5,0,5,0"
                      ItemsSource="{Binding AvailableDevelopers}"
                      HorizontalContentAlignment="Center"
                      dd:DragDrop.IsDragSource="True"
                      dd:DragDrop.IsDropTarget="True">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions >
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Row="0" Style="{StaticResource Label}">
+                        <StackPanel Margin="0,5,0,5">
+                            <TextBlock HorizontalAlignment="Center" FontWeight="Bold">
                                 <TextBlock.Text>
                                     <MultiBinding StringFormat="{}{0} {1}">
                                         <Binding Path="Forename"/>
@@ -40,26 +44,25 @@
                                 </TextBlock.Text>
                             </TextBlock>
 
-                            <TextBlock Grid.Column="1" Text="{Binding Email}" Style="{StaticResource Label}"/>
-                        </Grid>
+                            <TextBlock Text="{Binding Email}" HorizontalAlignment="Center"/>
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
 
-            <ListBox Grid.Column="1"
-                     Name="SprintTeamListBox"
+            <TextBlock Grid.Column="1" Grid.Row="0" Style="{StaticResource Label}" Text="Current Developers" HorizontalAlignment="Center"/>
+            <ListBox Name="SprintTeamListBox"
+                     Grid.Column="1"
+                     Grid.Row="1"
+                     Margin="5,0,5,0"
                      ItemsSource="{Binding SprintTeam}"
                      HorizontalContentAlignment="Center"
                      dd:DragDrop.IsDragSource="True"
                      dd:DragDrop.IsDropTarget="True">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions >
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Row="0" Style="{StaticResource Label}">
+                        <StackPanel Margin="0,5,0,5">
+                            <TextBlock HorizontalAlignment="Center" FontWeight="Bold">
                                 <TextBlock.Text>
                                     <MultiBinding StringFormat="{}{0} {1}">
                                         <Binding Path="Forename"/>
@@ -68,15 +71,15 @@
                                 </TextBlock.Text>
                             </TextBlock>
 
-                            <TextBlock Grid.Column="1" Text="{Binding Email}" Style="{StaticResource Label}"/>
-                        </Grid>
+                            <TextBlock Text="{Binding Email}" HorizontalAlignment="Center"/>
+                        </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
 
-        <Button Name="SaveButton" Content="Save Team" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding SaveTeamCommand}"/>
-        <Button Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="0,0,0,15" Command="{Binding BackCommand}"/>
+        <Button Name="SaveButton" Content="Save Team" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,10,0,0" Command="{Binding SaveTeamCommand}"/>
+        <Button Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="5,5,0,0" Command="{Binding BackCommand}"/>
         
     </StackPanel>
 </Page>
