--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -9,10 +9,14 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="SprintDashboard">
 
+    <Page.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
+    </Page.Resources>
+
     <StackPanel>
         <TextBlock Name="PageTitle" Text="Sprint Dashboard" Style="{StaticResource Title}" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
 
-        <ListBox Name="SprintTeamListBox" ItemsSource="{Binding Sprint.Users}" HorizontalContentAlignment="Center">
+        <ListBox Name="SprintTeamListBox" ItemsSource="{Binding CurrentSprint.Users}" HorizontalContentAlignment="Center">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -20,7 +24,7 @@
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Row="0" Style="{StaticResource Label}">
+                        <TextBlock Grid.Row="0">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0} {1}">
                                     <Binding Path="Forename"/>
@@ -29,11 +33,19 @@
                             </TextBlock.Text>
                         </TextBlock>
 
-                        <TextBlock Grid.Column="1" Text="{Binding Email}" Style="{StaticResource Label}"/>
+                        <TextBlock Grid.Column="1" Text="{Binding Email}"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
+        <Button Name="EditSprintTeam"
+                Content="Edit Team"
+                Style="{StaticResource StandardButton}"
+                HorizontalAlignment="Center"
+                Command="{Binding NavigateToManageSprintsCommand}"
+                Visibility="{Binding Path=Permissions.ScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
+        <Button Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Command="{Binding BackCommand}"/>
 
     </StackPanel>
 </Page>
