Darran & Zoey: Feature 9b: Worked on comments from pull request

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Resources/Styles/TextBoxes.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Text.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
