--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -9,11 +9,7 @@
       d:DesignHeight="100" d:DesignWidth="100"
       x:Name="Page"
       Title="ProjectDashboard" Height="500" Width="500">
-    
-    <Page.Resources>
-        <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
-    </Page.Resources>
-    
+
     <Grid Margin="10,0,10,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -50,8 +46,7 @@
                     Visibility="{Binding Path=Permissions.Manager, Converter={StaticResource BoolToVisConverter}}"/>
             <StackPanel Grid.Column="2">
                 <Button Content="Product Backlog" Command="{Binding GoToProductBacklogCommand}"/>
-                <Button Content="Sprints" 
-                        Command="{Binding GoToManageSprintsCommand}"/>
+                <Button Content="Sprints" Command="{Binding GoToManageSprintsCommand}"/>
             </StackPanel>
         </Grid>
 
