--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Buttons.xaml
@@ -29,5 +29,33 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
+
+    <Style TargetType="{x:Type Button}" x:Key="ExtendedButton">
+        <Setter Property="Background" Value="White"/>
+        <Setter Property="BorderBrush" Value="{StaticResource LightGrayBrush}"/>
+
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="120"/>
+
+        <Setter Property="FontFamily" Value="{StaticResource LatoRegular}"/>
+        <Setter Property="FontSize" Value="14"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border CornerRadius="4" BorderThickness="2" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
+                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{StaticResource BrightBlueBrush}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource DarkGrayBrush}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
 </ResourceDictionary>
