--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="300" d:DesignWidth="300"
@@ -14,17 +15,26 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="Email:" Style="{StaticResource Label}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="Password:" Style="{StaticResource Label}" HorizontalAlignment="Right"/>
-            </StackPanel>
 
-            <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,0,0,15"/>
-                <PasswordBox Name="PasswordBox" Style="{StaticResource DefaultPasswordBox}" MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left"/>
+            <StackPanel Grid.Column="0" HorizontalAlignment="Center">
+                <AdornerDecorator>
+                    <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" MaxLength="25" MaxWidth="150" MinWidth="150" HorizontalAlignment="Left" Margin="0,5,0,15">
+                        <utility:WatermarkService.Watermark>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Name="EmailTextBlock">E-mail</TextBlock>
+                        </utility:WatermarkService.Watermark>
+                    </TextBox>
+                </AdornerDecorator>
+                
+                <AdornerDecorator>
+                    <PasswordBox Name="PasswordBox" Style="{StaticResource DefaultPasswordBox}" MaxLength="25" MaxWidth="150" MinWidth="150" HorizontalAlignment="Center"  Margin="0,0,0,0">
+                        <utility:WatermarkService.Watermark>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center" Margin="0,5,0,0"  Name="PasswordTextBlock" >Password</TextBlock>
+                        </utility:WatermarkService.Watermark>
+                    </PasswordBox>
+                </AdornerDecorator>
+
             </StackPanel>
         </Grid>
 
