--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
@@ -12,11 +12,38 @@
     <StackPanel>
         <TextBlock Name="PageTitle" Text="Create Sprint" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
 
-        <TextBlock Text="Sprint Start Date" Style="{StaticResource Label}"/>
-        <DatePicker Name="StartDatePicker"/>
+        <TextBlock Text="Sprint Name" Style="{StaticResource Label}"/>
+        <TextBox Name="SprintNameTextBox" Style="{StaticResource DefaultTextBox}"/>
+
+        <TextBlock Text="Sprint Start Date" Style="{StaticResource Label}" Margin="0,15,0,0"/>
+        <DatePicker Name="StartDatePicker">
+            <DatePicker.Resources>
+                <Style TargetType="{x:Type DatePickerTextBox}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <TextBox Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" Style="{StaticResource DefaultTextBox}"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DatePicker.Resources>
+        </DatePicker>
 
         <TextBlock Text="Sprint End Date" Style="{StaticResource Label}" Margin="0,15,0,0"/>
-        <DatePicker Name="EndDatePicker"/>
+        <DatePicker Name="EndDatePicker">
+            <DatePicker.Resources>
+                <Style TargetType="{x:Type DatePickerTextBox}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <TextBox Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type DatePicker}}}" Style="{StaticResource DefaultTextBox}"/>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DatePicker.Resources>
+        </DatePicker>
 
         <Grid Margin="0,15,0,0">
             <Grid.ColumnDefinitions>
@@ -24,8 +51,8 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Content="Cancel" Style="{StaticResource StandardButton}" Command="{Binding CancelCommand}"/>
-            <Button Grid.Column="1" Content="Create" Style="{StaticResource StandardButton}" Command="{Binding CreateCommand}"/>
+            <Button Grid.Column="0" Name="CancelButton" Content="Cancel" Style="{StaticResource StandardButton}" Command="{Binding CancelCommand}"/>
+            <Button Grid.Column="1" Name="CreateButton" Content="Create" Style="{StaticResource StandardButton}" Command="{Binding CreateCommand}"/>
         </Grid>
         
     </StackPanel>
