--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
@@ -11,18 +11,12 @@
 
     <StackPanel>
         <TextBlock Name="PageTitle" Text="{Binding SelectedUserStory.Name}" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
-        <Grid Margin="10,0,10,0">
+        <Grid Margin="10,0,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
@@ -39,17 +33,31 @@
 
                 <Button Grid.Column="0" Content="Add Acceptance Test" Style="{StaticResource StandardButton}"
                     Command="{Binding GoToCreateAcceptanceTestCommand}"
-                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}" Grid.ColumnSpan="2" Margin="0,0,0,0" Width="Auto">
+                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}" Grid.ColumnSpan="2" Margin="0,0,0,35" Width="Auto">
                 </Button>
 
-                <Button Grid.Column="2" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding  GoToUserStoryCommand}" IsDefault="True"/>
+                <Button Grid.Column="2" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,10,35" Command="{Binding  GoToUserStoryCommand}" IsDefault="True"/>
             </Grid>
 
-            <Separator  Grid.Row="8" ></Separator>
+            
 
-            <TextBlock Grid.Row="9" Text="Acceptance Tests" TextAlignment="Left" FontWeight="Bold" Style="{StaticResource Label}" FontSize="16" Margin="10"></TextBlock>
+            <TextBlock Grid.Row="2" Text="Acceptance Tests" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="16" Margin="10"></TextBlock>
 
-            <ListBox Grid.Row="10" Name="UserStoryAcceptanceTests" HorizontalContentAlignment="Stretch">
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Grid.Column="0" Text="Given" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="12" Margin="10,41,10,10" Grid.Row="2"></TextBlock>
+                <TextBlock Grid.Column="1" Text="When" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="12" Margin="10,41,10,10" Grid.Row="2"></TextBlock>
+                <TextBlock Grid.Column="2" Text="Then" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="12" Margin="10,41,10,10" Grid.Row="2"></TextBlock>
+                <TextBlock Grid.Column="3" Text="Complete" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="12" Margin="10,41,10,10" Grid.Row="2"></TextBlock>
+            </Grid>
+
+            <ListBox Grid.Row="4" Name="UserStoryAcceptanceTests" HorizontalContentAlignment="Stretch">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="0,0,0,10">
@@ -71,7 +79,9 @@
                                     <TextBlock Text="{Binding Then}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="3">
-                                    <CheckBox Margin="5, 0" IsChecked="{Binding Completed}"
+                                    <CheckBox IsChecked="{Binding Completed}"
+                                              HorizontalAlignment="Center"
+                                              Margin="10" 
                                               Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.UpdateCommand}"
                                               CommandParameter="{Binding}"/>
 
