--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -186,7 +186,7 @@
                            Style="{StaticResource Header}" HorizontalAlignment="Center"
                            Margin="0,10,0,10"/>
 
-                <ListBox Name="TeamMembersListBox" HorizontalContentAlignment="Stretch" ItemsSource="{Binding TeamMembers}" Style="{StaticResource DefaultListBox}">
+                <ListBox Grid.Column="1" Name="TeamMembersListBox" HorizontalContentAlignment="Stretch" ItemsSource="{Binding TeamMembers}" Style="{StaticResource DefaultListBox}" Height="350">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <Grid>
