--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
@@ -20,30 +20,26 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="0">
                 <Grid.Resources>
                     <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
                 </Grid.Resources>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="0" Content="Add Acceptance Test" Style="{StaticResource StandardButton}"
+                <Button Grid.Row="0" Grid.Column="0" Content="Add Acceptance Test" Style="{StaticResource StandardButton}"
                     Command="{Binding GoToCreateAcceptanceTestCommand}"
-                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}" Grid.ColumnSpan="2" Margin="0,0,0,35" Width="Auto">
+                    Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}" Margin="0,0,0,35" Width="Auto">
                 </Button>
 
-                <Button Grid.Column="2" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,10,35" Command="{Binding GoToProductBacklogCommand}" IsDefault="True"/>
+                <Button Grid.Column="1" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,10,35" Command="{Binding GoToProductBacklogCommand}" IsDefault="True"/>
             </Grid>
 
+            <TextBlock Grid.Row="1" Text="Acceptance Tests" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="16" Margin="10"></TextBlock>
 
-
-            <TextBlock Grid.Row="2" Text="Acceptance Tests" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="16" Margin="10"></TextBlock>
-
-            <Grid Grid.Row="3">
+            <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
@@ -57,36 +53,29 @@
                 <TextBlock Grid.Column="3" Text="Complete" TextAlignment="Center" FontWeight="Bold" Style="{StaticResource Label}" FontSize="12" Margin="10,41,10,10" Grid.Row="2"></TextBlock>
             </Grid>
 
-            <ListBox Grid.Row="4" Name="UserStoryAcceptanceTests" HorizontalContentAlignment="Stretch">
+            <ListBox Grid.Row="3" Name="UserStoryAcceptanceTests" HorizontalContentAlignment="Stretch">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="0,0,0,10">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Given}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
+                           
+                            <TextBlock Grid.Column="1" Text="{Binding When}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
+                            
+                            <TextBlock Grid.Column="2" Text="{Binding Then}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
 
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="0">
-                                    <TextBlock Text="{Binding Given}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
-                                </StackPanel>
-                                <StackPanel Grid.Column="1">
-                                    <TextBlock Text="{Binding When}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
-                                </StackPanel>
-                                <StackPanel Grid.Column="2">
-                                    <TextBlock Text="{Binding Then}" Margin="10" FontWeight="Bold" FontSize="12" HorizontalAlignment="Center"/>
-                                </StackPanel>
-                                <StackPanel Grid.Column="3">
-                                    <CheckBox IsChecked="{Binding Completed}"
+                            <CheckBox Grid.Column="3"
+                                              IsChecked="{Binding Completed}"
                                               HorizontalAlignment="Center"
                                               Margin="10" 
                                               Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type Page}}, Path=DataContext.UpdateCommand}"
                                               CommandParameter="{Binding}"/>
-                                </StackPanel>
-                            </Grid>
-                        </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
