Domhnall: Functionality to update user-story points

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/App.xaml
@@ -20,6 +20,7 @@
             <BooleanToVisibilityConverter x:Key="BoolToVisConverter"/>
             <utility:BoolToHiddenConverter x:Key="BoolToHiddenConverter"/>
             <utility:UserImagePathValueConverter x:Key="ImageConverter"/>
+            <utility:BoolToEnabledConverter x:Key="BoolToEnabledConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
