--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -5,10 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d"
-      Background="{StaticResource LightBlueBrush}"
+     Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="100" d:DesignWidth="100"
       x:Name="Page"
-      Title="ProjectDashboard" Height="800" Width="600">
+      Title="ProjectDashboard">
 
     <Grid>
         <Grid.RowDefinitions>
