--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Colors.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Colors.xaml
@@ -11,18 +11,23 @@
     <Color x:Key="LightGray">#e3e3e3</Color>
     <SolidColorBrush x:Key="LightGrayBrush" Color="{StaticResource LightGray}"/>
 
-    <Color x:Key="LightBlue">#99ccff</Color>
+    <Color x:Key="LightBlue">#0099ff</Color>
     <SolidColorBrush x:Key="LightBlueBrush" Color="{StaticResource LightBlue}"/>
 
     <Color x:Key="BrightBlue">#66b2ff</Color>
     <SolidColorBrush x:Key="BrightBlueBrush" Color="{StaticResource BrightBlue}"/>
 
+
+
+    <Color x:Key="DarkBlue">#113953</Color>
+    <SolidColorBrush x:Key="DarkBlueBrush" Color="{StaticResource DarkBlue}"/>
+
     <Color x:Key="Red">#ff6666</Color>
     <SolidColorBrush x:Key="RedBrush" Color="{StaticResource Red}"/>
 
     <LinearGradientBrush x:Key="BackgroundGradient" StartPoint="0.5,0" EndPoint="0.5,1.5">
-        <GradientStop Color="{StaticResource LightBlue}" Offset="0"/>
-        <GradientStop Color="White" Offset="0.8"/>
+        <GradientStop Color="{StaticResource DarkBlue}" Offset="0"/>
+        <GradientStop Color="{StaticResource LightBlue}" Offset="0.5"/>
     </LinearGradientBrush>
     
 </ResourceDictionary>
