--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateProject.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
@@ -11,7 +12,7 @@
 
 
     <StackPanel>
-        <TextBlock Text="{Binding TitleLabel, FallbackValue='Create A Project'}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
+        <TextBlock Text="{Binding TitleLabel, FallbackValue='Create A Project'}" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -20,20 +21,41 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="{Binding ProjectManagerLabel, FallbackValue='Project Manager:'}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="{Binding ProjectNameLabel, FallbackValue=Project Name:}" HorizontalAlignment="Right" Margin="0,0,-1,15" Width="91"/>
-                <TextBlock Text="{Binding DescriptionLabel, FallbackValue=Description:}" HorizontalAlignment="Right" Width="90"/>
+                <TextBlock Text="{Binding ProjectManagerLabel, FallbackValue='Project Manager:'}" Style="{StaticResource Label}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
             </StackPanel>
 
-            <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBlock Text="{Binding ProjectManagerNameLabel, FallbackValue='blank'}" HorizontalAlignment="Left" Margin="0,0,0,15" />
-                <TextBox Text="{Binding ProjectNameTextContent}"  MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,1,0,15"/>
-                <TextBox Text="{Binding DescriptionTextContent}"  MaxLength="25" MaxWidth="125" MinWidth="125" HorizontalAlignment="Left" Margin="0,0,0,15"  Height="66" Width="113"/>
+            <StackPanel Grid.Column="1" Grid.ColumnSpan="2" Margin="12,0,25,0">
+                <TextBlock Text="{Binding ProjectManagerNameLabel, FallbackValue='blank'}" Style="{StaticResource Label}" HorizontalAlignment="Left" Margin="0,0,0,15" />
+            </StackPanel>
+            
+        </Grid>
+
+        <Grid Margin="110,0,100,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Margin="12,0,25,0">
+
+                <AdornerDecorator>
+                    <TextBox Name="ProjectNameTextBox" Text="{Binding ProjectNameTextContent}" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0">
+                        <utility:WatermarkService.Watermark>
+                            <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Left" Margin="90,0,0,0"  Name="ProjectNameTextBlock">Project Name</TextBlock>
+                        </utility:WatermarkService.Watermark>
+                    </TextBox>
+                </AdornerDecorator>
+                <AdornerDecorator>
+                    <TextBox Name="ProjectDescriptionTextBox" Text="{Binding DescriptionTextContent}" Height="60" TextWrapping="Wrap" AcceptsReturn="True" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0">
+                        <utility:WatermarkService.Watermark>
+                            <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Left" Margin="90,0,0,0"  Name="ProjectDescriptionTextBlock">Description</TextBlock>
+                        </utility:WatermarkService.Watermark>
+                    </TextBox>
+                </AdornerDecorator>
             </StackPanel>
         </Grid>
 
         <StackPanel Margin="0,20,0,20">
-            <Button Content="{Binding CreateButtonText, FallbackValue='Create'}" HorizontalAlignment="Center" Margin="0,10,-15,15" Command="{Binding CreateProjectCommand}"/>
+            <Button Content="{Binding CreateButtonText, FallbackValue='Create'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,10,-15,15" Command="{Binding CreateProjectCommand}"/>
         </StackPanel>
 
     </StackPanel>
