--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
-      Background="{StaticResource LightBlueBrush}"
+      Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="CreateSprint">
 
     <StackPanel>
-        <TextBlock Name="PageTitle" Text="Create Sprint" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
-
+       
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
         <TextBlock Text="Sprint Name" Style="{StaticResource Label}"/>
         <TextBox Name="SprintNameTextBox" Style="{StaticResource DefaultTextBox}"/>
 
