--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateUserStory.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateUserStory.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
-      Background="{StaticResource LightBlueBrush}"
+      Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="CreateUserStory">
 
     <!-- Allows Rows for stacking elements vertically -->
     <StackPanel>
-        <TextBlock Text="{Binding CreateUserStoryTitle, FallbackValue='Create User Story'}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
 
         <!-- Grid for splitting into columns -->
         <Grid>
@@ -22,16 +22,16 @@
 
             <!-- Left Column for Labels -->
             <StackPanel Grid.Column="0" Margin="0,0,12,0">
-                <TextBlock Text="{Binding NameLabel, FallbackValue='Story Name'}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="{Binding MarketValueLabel, FallbackValue='Market Value'}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
-                <TextBlock Text="{Binding DescriptionLabel, FallbackValue='Description'}" HorizontalAlignment="Right"/>
+                <TextBlock Text="{Binding NameLabel, FallbackValue='Story Name'}" Style="{StaticResource Label}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
+                <TextBlock Text="{Binding MarketValueLabel, FallbackValue='Market Value'}" Style="{StaticResource Label}" HorizontalAlignment="Right" Margin="0,0,0,15"/>
+                <TextBlock Text="{Binding DescriptionLabel, FallbackValue='Description'}" Style="{StaticResource Label}" HorizontalAlignment="Right"/>
             </StackPanel>
 
             <!-- Right Column for Entry Fields -->
-            <StackPanel Grid.Column="1" Margin="12,0,25,0">
-                <TextBox Text="{Binding NameTextContent}" MaxLength="25" Width="175" HorizontalAlignment="Left" Margin="0,0,0,15"/>
-                <TextBox Text="{Binding MarketValueTextContent}" PreviewTextInput="NumberOnlyTextBoxValidation" Width="175" HorizontalAlignment="Left" Margin="0,0,0,15"/>
-                <TextBox Text="{Binding DescriptionTextContent}" MaxLength="25" Width="175" Height="75" HorizontalAlignment="Left" Margin="0,0,0,15"/>
+            <StackPanel Grid.Column="1" >
+                <TextBox Text="{Binding NameTextContent}" MaxLength="25" Width="175" HorizontalAlignment="Center" Margin="0,0,0,15"/>
+                <TextBox Text="{Binding MarketValueTextContent}" PreviewTextInput="NumberOnlyTextBoxValidation" Width="175" HorizontalAlignment="Center" Margin="0,0,0,15"/>
+                <TextBox Text="{Binding DescriptionTextContent}" MaxLength="25" Width="175" Height="75" HorizontalAlignment="Center" Margin="0,0,0,15"/>
 
                 <!-- Grid for splitting buttons into columns -->
                 <Grid HorizontalAlignment="Left" Margin="40,0,0,0">
@@ -40,8 +40,8 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0" Content="{Binding CancelButtonText, FallbackValue='Cancel'}" HorizontalAlignment="Center" Margin="0,0,10,0" Command="{Binding CancelCommand}"/>
-                    <Button Grid.Column="1" Content="{Binding CreateButtonText, FallbackValue='Create'}" HorizontalAlignment="Center" Margin="10,0,0,0" Command="{Binding CreateCommand}"/>
+                    <Button Grid.Column="0" Content="{Binding CancelButtonText, FallbackValue='Cancel'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,10,0" Command="{Binding CancelCommand}"/>
+                    <Button Grid.Column="1" Content="{Binding CreateButtonText, FallbackValue='Create'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="10,0,0,0" Command="{Binding CreateCommand}"/>
                 </Grid>
             </StackPanel>
         </Grid>
