--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
@@ -11,7 +11,7 @@
       Title="AddSprintTeamMember">
 
     <StackPanel>
-        <TextBlock Style="{StaticResource Title}" Text="Manage Sprint Team" HorizontalAlignment="Center" Margin="0,10,0,10"/>
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
 
         <Grid>
             <Grid.ColumnDefinitions>
