--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ManageSprints.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ManageSprints.xaml
@@ -10,7 +10,7 @@
       Title="ManageSprints">
 
     <StackPanel>
-        <TextBlock Name="PageTitle" Text="Manage Sprints" Style="{StaticResource Title}" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
         
         <StackPanel Background="CadetBlue">
             <TextBlock FontSize ="14" Text="{Binding CurrentProject.Name}" HorizontalAlignment="Left" />
