--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
@@ -10,7 +10,8 @@
     Title="UserStoryDashboard">
 
     <StackPanel>
-        <TextBlock Name="PageTitle" Text="{Binding SelectedUserStory.Name}" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,25"/>
+        <ContentControl  Template="{StaticResource Headers}" Name="Header" ></ContentControl>
+
         <Grid Margin="10,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
