--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CSC3045_CS2.Pages.ProjectDashboard"
+﻿<local:BasePage x:Class="CSC3045_CS2.Pages.ProjectDashboard"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -250,4 +250,4 @@
         </Grid>
     </Grid>
     </StackPanel>
-</Page>
+</local:BasePage>
