--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/CreateSprint.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CSC3045_CS2.Pages.CreateSprint"
+﻿<local:BasePage x:Class="CSC3045_CS2.Pages.CreateSprint"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -56,4 +56,4 @@
         </Grid>
         
     </StackPanel>
-</Page>
+</local:BasePage>
