--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="CSC3045_CS2.ProductBacklog"
+﻿<local:BasePage x:Class="CSC3045_CS2.ProductBacklog"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:dd="urn:gong-wpf-dragdrop"
-      xmlns:local="clr-namespace:CSC3045_CS2"
+      xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
       d:DesignHeight="300" d:DesignWidth="300"
@@ -87,4 +87,4 @@
     </Grid>
     </StackPanel>
 
-</Page>
+</local:BasePage>
