--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/SprintDashboard.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CSC3045_CS2.Pages.SprintDashboard"
+﻿<local:BasePage x:Class="CSC3045_CS2.Pages.SprintDashboard"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -44,4 +44,4 @@
         <Button Name="BackButton" Content="Back" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Command="{Binding BackCommand}"/>
 
     </StackPanel>
-</Page>
+</local:BasePage>
