--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/UserStoryDetails.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="CSC3045_CS2.Pages.UserStoryDetails"
+﻿<local:BasePage x:Class="CSC3045_CS2.Pages.UserStoryDetails"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -78,4 +78,4 @@
             </ListBox>
         </Grid>
     </StackPanel>
-</Page>
+</local:BasePage>
